# ChangeLog for dev-ruby/polyglot
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/polyglot/ChangeLog,v 1.6 2010/01/13 16:57:06 ranger Exp $

  13 Jan 2010; Brent Baude <ranger@gentoo.org> polyglot-0.2.9-r1.ebuild:
  Marking polyglot-0.2.9-r1 ~ppc64 for bug 300739

*polyglot-0.2.9-r1 (16 Dec 2009)

  16 Dec 2009; Hans de Graaff <graaff@gentoo.org> +polyglot-0.2.9-r1.ebuild:
  Bump to use ruby-fakegem.

  09 Dec 2009; Hans de Graaff <graaff@gentoo.org> -polyglot-0.2.6.ebuild,
  -polyglot-0.2.8.ebuild:
  Remove old versions.

*polyglot-0.2.9 (16 Sep 2009)

  16 Sep 2009; Hans de Graaff <graaff@gentoo.org> +polyglot-0.2.9.ebuild:
  Version bump: Use to_s on Pathname to support Ruby 1.9

*polyglot-0.2.8 (19 Aug 2009)

  19 Aug 2009; Hans de Graaff <graaff@gentoo.org> +polyglot-0.2.8.ebuild:
  Version bump: fixes related to catching of LoadErrors.

*polyglot-0.2.6 (08 Aug 2009)

  08 Aug 2009; Hans de Graaff <graaff@gentoo.org> +polyglot-0.2.6.ebuild,
  +metadata.xml:
  Initial import. Dependency of forthcoming dev-ruby/treetop, which in turn
  is a dependency of cucumber.
