@@ -1,12 +1,14 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/polyglot/polyglot-0.2.9-r1.ebuild,v 1.2 2010/01/13 16:57:06 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/polyglot/polyglot-0.2.9-r1.ebuild,v 1.3 2010/01/13 18:41:05 flameeyes Exp $
 
 EAPI=2
 USE_RUBY="ruby18"
 
 RUBY_FAKEGEM_TASK_DOC=""
 RUBY_FAKEGEM_TASK_TEST=""
+
+RUBY_FAKEGEM_EXTRADOC="History.txt README.txt"
 
 inherit ruby-fakegem
 
@@ -22,8 +24,4 @@ ruby_add_bdepend test virtual/ruby-test-unit
 
 each_ruby_test() {
 	${RUBY} test/test_polyglot.rb
-}
-
-all_ruby_install() {
-	dodoc History.txt README.txt
 }
