@@ -2,13 +2,15 @@
 Hash: SHA1
 
 DIST ruby-gnome2-all-0.19.1.tar.gz 2330644 RMD160 3161d8e2d99ba91ac3a8c6ee51992462b5413e10 SHA1 7b42fd26e54eb82c006f7aeacaf91efc417bdbde SHA256 ec9e5b275f6ca1970d441cc935dfd82dec941fd88d13f8fbfc917c6e26a8212f
+DIST ruby-gnome2-all-0.19.3.tar.gz 2335847 RMD160 a7ec4b9b7c17f2e23a5a51a7ed9c8df5a6c3ea7f SHA1 f6ab4c1699c4920c738343870b13ba5410a5ecbf SHA256 c457877d99cacadfee3d08b2c41ce1d4c3b3a4c783731e5487dfbae581ef3097
 EBUILD ruby-pango-0.19.1.ebuild 461 RMD160 1a2d94a773968cd259d709e00699bfb16f27fe19 SHA1 255e5bc04daf0660d3df88ed8e8b0384115a7fc8 SHA256 f8c2b073396b957b27b8bb0a84d98fa73862b7ea6c689dddd70f1371e33af044
-MISC ChangeLog 6001 RMD160 880e23e32eca2c8b9ff3c49b71c6124fd866b772 SHA1 cb59dfbb0a18a2711fc559b21f7baa52966a4ed6 SHA256 be6968f11d11c29ca2113369a72921ec40d4fa1016e940c61c2a5dd25fb0c42d
+EBUILD ruby-pango-0.19.3.ebuild 494 RMD160 bd4a4ebd7a587504a2dd04a7caf3399d33821d1e SHA1 282da50b784cec198d2ec61dd89e4234defc9a2b SHA256 275b3d9ffa4e96a4786fe1b5c33707fb39e73bac0f2f68f0ddf65d2a10b76dc6
+MISC ChangeLog 6161 RMD160 4127a9cc2d5ee5982c33330f1985fcf74a5bdd51 SHA1 b31df9c7e150dc9d7a9b3ddbb0adc7c9fa124c5a SHA256 6851afe377863c24aae4d892da34360f7247f234948318d94ebfb43ce16bbd25
 MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAktOE2IACgkQeM7EJeUH71OWFACfVzkFgHGG0h9xKMvN+Vi0tDvs
-Jf4An2n6znC5ojTvVWVLhVA9221pnFZu
-=Sb+F
+iEYEARECAAYFAktOFNAACgkQeM7EJeUH71N5ugCeORsaPIKKqa9z4FhRB4OHdVFc
+IM8AnAlKOsZ0Y3TvwEgYP0NPznFLrxP/
+=byZV
 -----END PGP SIGNATURE-----
