@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/polyglot
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/polyglot/ChangeLog,v 1.6 2010/01/13 16:57:06 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/polyglot/ChangeLog,v 1.7 2010/01/13 18:41:05 flameeyes Exp $
+
+  13 Jan 2010; Diego E. Pettenò <flameeyes@gentoo.org>
+  polyglot-0.2.9-r1.ebuild:
+  Use EXTRADOC variable.
 
   13 Jan 2010; Brent Baude <ranger@gentoo.org> polyglot-0.2.9-r1.ebuild:
   Marking polyglot-0.2.9-r1 ~ppc64 for bug 300739
